fix button position on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -55,12 +55,22 @@ input[type="submit"]:not(:disabled):hover {
   transform: translate(-50%, -50%);
 }
 
-.form-container {
-  background-color:  white;
+main {
   position: fixed;
-  top: 50%;
-  left:  50%;
-  transform: translate(50vw,-50vh) translateX(-100%) translate(-10px, 10px);
+  height: 100%;
+  width: 100%;
+  display: flex;
+  top: 0;
+  flex-wrap: wrap;
+  justify-content: end;
+  padding: 10px;
+}
+
+.form-container {
+  position: relative;
+  background-color:  white;
+  top: 0;
+  transform: translate(0, 0);
   width: 2em;
   height: 2em;
   border-radius: 5px;
@@ -70,8 +80,9 @@ input[type="submit"]:not(:disabled):hover {
 .form-container.visible {
   height: 180px;
   max-width: 450px;
-  width: calc(100% - 20px);
-  transform: translate(-50%,-50%);
+  top: 50%;
+  width: 100%;
+  transform: translate(0, -50%);
   padding: 2em;
   border-radius: 10px;
 }
